[gd_scene load_steps=13 format=2]

[ext_resource path="res://Ground.png" type="Texture" id=1]
[ext_resource path="res://Start.tscn" type="PackedScene" id=2]
[ext_resource path="res://End.tscn" type="PackedScene" id=3]
[ext_resource path="res://Thintel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level Code.gd" type="Script" id=6]
[ext_resource path="res://HPlatform.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=3]
0/name = "Ground.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 303.875 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 520, 4 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 4 )

[node name="Level Layout" type="Node2D"]
script = ExtResource( 6 )
level = 7

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0 )

[node name="Border" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2( -4, 304.125 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2( 1028, 304.125 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2( 512, 612 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2( 512, -4 )
shape = SubResource( 5 )

[node name="Start" parent="." instance=ExtResource( 2 )]
position = Vector2( 504, 544 )

[node name="End" parent="." instance=ExtResource( 3 )]
position = Vector2( 509, 64 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 504, 560 )

[node name="Label" type="Label" parent="."]
margin_top = 8.0
margin_right = 1024.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 6 )
text = "10"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HPlatform" parent="." instance=ExtResource( 7 )]
position = Vector2( 960, 368 )
x_distance = 72
time = 3.5

[node name="HPlatform2" parent="." instance=ExtResource( 7 )]
position = Vector2( 72, 240 )
x_distance = 960
time = 2.5

[node name="HPlatform3" parent="." instance=ExtResource( 7 )]
position = Vector2( 72, 456 )
x_distance = 960
time = 4.5

[connection signal="body_entered" from="Start" to="." method="_on_Start_body_entered"]
[connection signal="body_entered" from="End" to="." method="_on_End_body_entered"]
[connection signal="player_moved" from="Player" to="." method="_on_Player_player_moved"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
